maybe workaround (experiemnting() wth regression due to change in version of upload artifact tool

--- a/.github/workflows/build-N-test.yml
+++ b/.github/workflows/build-N-test.yml
@@ -128,7 +128,8 @@ jobs:
           name: Sample apps (${{ matrix.displayTargetName }})
           if-no-files-found: warn
           path: |
-            Builds/${{ matrix.config_name }}/Samples-*
+            Builds/${{ matrix.config_name }}/*Samples-*
+          overwrite: true
       - name: Make Documentation
         run: make documentation
       - name: Archive Documentation Results
