more fixes to github actions

--- a/.github/workflows/build-N-test.yml
+++ b/.github/workflows/build-N-test.yml
@@ -129,15 +129,15 @@ jobs:
           if-no-files-found: warn
           path: |
             Builds/${{ matrix.config_name }}/*Samples-*
-          overwrite: true
       - name: Make Documentation
         run: make documentation
       - name: Archive Documentation Results
         uses: actions/upload-artifact@v4
         with:
-          name: Doxygen Documentation
+          name: Stroika-Doxygen-Help.tar.gz
           path: |
             Builds/Stroika-Doxygen-Help.tar.gz
+          #Dont name based on who built - sb all teh same
           overwrite: true
       - name: Archive Log Results
         if: always()
