fix docker tag recent regression

--- a/DockerBuildContainers/Makefile
+++ b/DockerBuildContainers/Makefile
@@ -124,11 +124,11 @@ endif
 
 tag-images:
 	for image in "${IMAGES}"; do \
-		docker tag $${image} v3; \
+		docker tag $${image} ${image}:v3; \
 	done
 ifeq ($(STROIKA_VERSION_Final),true)
 	for image in ${IMAGES}; do  \
-		docker tag $${image} ${STROIKA_VERSION}; \
+		docker tag $${image} ${image}:${STROIKA_VERSION}; \
 	done
 endif
 
