fix docker tag recent regression

--- a/DockerBuildContainers/Makefile
+++ b/DockerBuildContainers/Makefile
@@ -123,7 +123,7 @@ endif
 
 
 tag-images:
-	for image in "${IMAGES}"; do \
+	for image in ${IMAGES}; do \
 		docker tag $${image} $${image}:v3; \
 	done
 ifeq ($(STROIKA_VERSION_Final),true)
